# simple-ray-tracer

./: CMakeLists.txt  Config.h  README.md  Scene.h  main.cpp
base/: Camera.h  Canvas.h  Common.h  Random.h  Ray.h  Vec.h
kdtree/: PhotonKdtree.h
object/: Material.h  Object.h  Texture.h
object/kdtree/: Kdtree.h
surface/: Bezier.h  Implicit.h
tracer/: PPMtracer.h  Pathtracer.h  Photon.h
